--- a/works/numpyro_sample.ipynb
+++ b/works/numpyro_sample.ipynb
@@ -86,16 +86,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "import jax.numpy as jnp\n",
+    "from jax import random, vmap\n",
+    "from jax.scipy.special import logsumexp\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "import numpyro\n",
+    "from numpyro.diagnostics import hpdi\n",
+    "import numpyro.distributions as dist\n",
+    "from numpyro import handlers\n",
+    "from numpyro.infer import MCMC, NUTS\n",
+    "\n",
+    "plt.style.use(\"bmh\")\n",
+    "if \"NUMPYRO_SPHINXBUILD\" in os.environ:\n",
+    "    set_matplotlib_formats(\"svg\")\n",
+    "\n",
+    "assert numpyro.__version__.startswith(\"0.13.2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "geho\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -117,34 +140,138 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Loc</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>MedianAgeMarriage</th>\n",
+       "      <th>Marriage</th>\n",
+       "      <th>Marriage SE</th>\n",
+       "      <th>Divorce</th>\n",
+       "      <th>Divorce SE</th>\n",
+       "      <th>WaffleHouses</th>\n",
+       "      <th>South</th>\n",
+       "      <th>Slaves1860</th>\n",
+       "      <th>Population1860</th>\n",
+       "      <th>PropSlaves1860</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>25.3</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>128</td>\n",
        "      <td>1</td>\n",
+       "      <td>435080</td>\n",
+       "      <td>964201</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>25.2</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>6.33</td>\n",
+       "      <td>25.8</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>2.92</td>\n",
+       "      <td>24.3</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>1.22</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>111115</td>\n",
+       "      <td>435450</td>\n",
+       "      <td>0.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>37.25</td>\n",
+       "      <td>26.8</td>\n",
+       "      <td>19.1</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>379994</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   0\n",
-       "0  1"
+       "     Location Loc  Population  MedianAgeMarriage  Marriage  Marriage SE  \\\n",
+       "0     Alabama  AL        4.78               25.3      20.2         1.27   \n",
+       "1      Alaska  AK        0.71               25.2      26.0         2.93   \n",
+       "2     Arizona  AZ        6.33               25.8      20.3         0.98   \n",
+       "3    Arkansas  AR        2.92               24.3      26.4         1.70   \n",
+       "4  California  CA       37.25               26.8      19.1         0.39   \n",
+       "\n",
+       "   Divorce  Divorce SE  WaffleHouses  South  Slaves1860  Population1860  \\\n",
+       "0     12.7        0.79           128      1      435080          964201   \n",
+       "1     12.5        2.05             0      0           0               0   \n",
+       "2     10.8        0.74            18      0           0               0   \n",
+       "3     13.5        1.22            41      1      111115          435450   \n",
+       "4      8.0        0.24             0      0           0          379994   \n",
+       "\n",
+       "   PropSlaves1860  \n",
+       "0            0.45  \n",
+       "1            0.00  \n",
+       "2            0.00  \n",
+       "3            0.26  \n",
+       "4            0.00  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "print('geho')\n",
-    "\n",
-    "df=pd.DataFrame([1])\n",
-    "df.head()"
+    "DATASET_URL = \"https://raw.githubusercontent.com/rmcelreath/rethinking/master/data/WaffleDivorce.csv\"\n",
+    "dset = pd.read_csv(DATASET_URL, sep=\";\")\n",
+    "dset.head()"
    ]
   },
   {
@@ -152,7 +279,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vars = [\n",
+    "    \"Population\",\n",
+    "    \"MedianAgeMarriage\",\n",
+    "    \"Marriage\",\n",
+    "    \"WaffleHouses\",\n",
+    "    \"South\",\n",
+    "    \"Divorce\",\n",
+    "]\n",
+    "sns.pairplot(dset, x_vars=vars, y_vars=vars, palette=\"husl\");"
+   ]
   }
  ],
  "metadata": {
